--- a/plugins/ProSkillAPI/skills/barbarian/barbarian_totem_wolf.yml
+++ b/plugins/ProSkillAPI/skills/barbarian/barbarian_totem_wolf.yml
@@ -1,46 +1,42 @@
 # Skill: Totem do Lobo
 name: barbarian_totem_wolf
 display: "§fTotem do Lobo"
-icon: BONE
+icon: WOLF_SPAWN_EGG
 type: Active
 max-level: 1
 attributes:
   cooldown-base: 90
   cooldown-scale: 0
+  mana-cost-base: 25
+  mana-cost-scale: 0
 description:
-  - "§7Marca um alvo e concede +12% dano contra ele para aliados próximos por 12s."
+  - "§7Marca um alvo por 12s. Aliados causam +12% de dano ao alvo marcado."
 components:
   Cast:
     type: trigger
+    data:
+      cooldown: true
     children:
-      TargetEnemy:
+      Target:
         type: target
         data:
-          range-base: 15
+          shape: single
+          range-base: 8
           group: enemy
         children:
-          ApplyMark:
+          Mark:
+            type: mechanic
+            data:
+              command: "skript run barbarian_totem_wolf %caster% %target% 12 0.12"
+              silent: true
+          Indicator:
             type: mechanic
             data:
               potion: GLOWING
               seconds-base: 12
               amplifier-base: 0
-              indicator: "§fMarca do Lobo"
-          AllyCircle:
-            type: target
-            data:
-              group: ally
-              radius-base: 8
-            children:
-              ApplyDamageBoost:
-                type: mechanic
-                data:
-                  potion: STRENGTH
-                  seconds-base: 12
-                  amplifier-base: 0
-                  indicator: "§f+12% dano vs alvo marcado"
       Message:
         type: mechanic
         data:
-          message: "§fA alcateia focou o alvo marcado!"
+          message: "§fVocê marca a presa do Totem do Lobo."
           targets: self
