--- a/plugins/ProSkillAPI/subclasses/barbarian_totem.yml
+++ b/plugins/ProSkillAPI/subclasses/barbarian_totem.yml
@@ -1,35 +1,31 @@
-# Subclasse Guardião Totêmico do Bárbaro
+# Subclasse Guardião Totêmico
 name: Barbarian_Totem
 display: "§aGuardião Totêmico"
 description:
-  - "§7Invoca totens espirituais para apoiar aliados."
-  - "§aControla auras variadas com custos de Fúria."
+  - "§7Totens situacionais que reforçam aliados e controlam ameaças."
+  - "§eConsomem Stamina e Fúria conforme a potência para manter uptime controlado (<60%)."
 options:
   needs-permission: true
   parent: Barbarian
-  mana-name: "Fúria"
 skills:
   tier1:
     active:
       - barbarian_totem_bear
       - barbarian_totem_eagle
-    passive:
-      - barbarian_totem_spirit_link
+    passive: []
   tier2:
     active:
       - barbarian_totem_bear
       - barbarian_totem_eagle
       - barbarian_totem_wolf
-    passive:
-      - barbarian_totem_spirit_link
+    passive: []
   tier3:
     active:
       - barbarian_totem_bear
       - barbarian_totem_eagle
       - barbarian_totem_wolf
       - barbarian_totem_tiger
-    passive:
-      - barbarian_totem_spirit_link
+    passive: []
   tier4:
     active:
       - barbarian_totem_bear
@@ -37,5 +33,6 @@ skills:
       - barbarian_totem_wolf
       - barbarian_totem_tiger
       - barbarian_totem_phoenix
-    passive:
-      - barbarian_totem_spirit_link
+    passive: []
+notes:
+  - "Revive e bônus de alcance são tratados via barbarian_cmds.sk para respeitar caps globais."
