--- a/plugins/ProSkillAPI/skills/barbarian/barbarian_reckless_attack.yml
+++ b/plugins/ProSkillAPI/skills/barbarian/barbarian_reckless_attack.yml
@@ -4,44 +4,52 @@ display: "§cAtaque Temerário"
 icon: IRON_AXE
 type: Active
 max-level: 1
+needs-permission: true
 attributes:
-  level-base: 1
-  level-scale: 0
-  cost-base: 0
-  cost-scale: 0
   cooldown-base: 60
   cooldown-scale: 0
-  mana-cost-base: 0
+  mana-cost-base: 20
+  mana-cost-scale: 0
 description:
-  - "§ePor 20s, seus ataques corpo a corpo ganham +25% chance de crítico"
-  - "§eou penetram 35% da armadura do alvo (PvE)."
-  - "§cEnquanto ativo, você recebe +15% dano."
+  - "§7Canaliza agressividade pura por 8s."
+  - "§eAlterna entre +15% penetração de armadura (agachar) ou +15% chance crítica."
+  - "§cRecebe +10% dano durante o efeito."
+  - "§8Comando: /temerario."
 components:
   Cast:
     type: trigger
     data:
       cooldown: true
     children:
-      ApplyOffense:
+      ModeCheck:
+        type: condition
+        data:
+          compare: sneaking
+          type: state
+        children:
+          ApplyPenetration:
+            type: mechanic
+            data:
+              potion: STRENGTH
+              seconds-base: 8
+              amplifier-base: 0
+              indicator: "§cPenetração +15% (agachado)"
+      ModeElse:
         type: mechanic
         data:
-          potion: STRENGTH
-          seconds-base: 20
-          seconds-scale: 0
-          amplifier-base: 0
-          amplifier-scale: 0
-          indicator: "§cAtaque Temerário: +crit"
-      ApplyVulnerability:
+          potion: LUCK
+          seconds-base: 8
+          amplifier-base: 1
+          indicator: "§cCrítico +15%"
+      DamageTakenDebuff:
         type: mechanic
         data:
           potion: WEAKNESS
-          seconds-base: 20
-          seconds-scale: 0
+          seconds-base: 8
           amplifier-base: 0
-          amplifier-scale: 0
-          indicator: "§cRecebe +15% dano"
-      Message:
+          indicator: "§cExposto (+10% dano recebido)"
+      Notify:
         type: mechanic
         data:
-          message: "§cVocê ataca com temeridade!"
+          message: "§cAtaque Temerário ativo!"
           targets: self
