--- a/plugins/ProSkillAPI/skills/barbarian/barbarian_storm_eye.yml
+++ b/plugins/ProSkillAPI/skills/barbarian/barbarian_storm_eye.yml
@@ -1,47 +1,43 @@
-# Skill: Olho do Furacão (ULT)
+# Skill: Olho do Furacão (Ultimate)
 name: barbarian_storm_eye
 display: "§bOlho do Furacão"
-icon: TRIDENT
+icon: ENDER_EYE
 type: Active
 max-level: 1
 attributes:
   cooldown-base: 210
   cooldown-scale: 0
+  mana-cost-base: 35
+  mana-cost-scale: 0
 description:
-  - "§7Cria vórtice de 8 blocos por 12s que puxa inimigos e aplica +20% vulnerabilidade elétrica."
+  - "§7Cria vórtice de 8 blocos por 12s, puxando inimigos e aplicando +20% vulnerabilidade elétrica."
+  - "§eConsome 1 carga de Fúria."
 components:
   Cast:
     type: trigger
     data:
       cooldown: true
     children:
-      VortexLoop:
+      CheckRage:
+        type: condition
+        data:
+          key: rage_stacks
+          min-value: 1
+          fail-message: "§cPrecisa de Fúria acumulada."
+        children:
+          Spend:
+            type: mechanic
+            data:
+              key: rage_stacks
+              amount-base: 1
+              indicator: "§6-1 Rage"
+      Vortex:
         type: mechanic
         data:
-          repeat: 6
-          interval: 2
-        children:
-          TargetEnemies:
-            type: target
-            data:
-              shape: sphere
-              radius-base: 8
-              group: enemy
-            children:
-              Pull:
-                type: mechanic
-                data:
-                  pull-base: 0.4
-                  pull-y-base: 0.1
-              Vulnerability:
-                type: mechanic
-                data:
-                  potion: WEAKNESS
-                  seconds-base: 2.5
-                  amplifier-base: 1
-                  indicator: "§b+20% dano elétrico"
+          command: "skript run barbarian_storm_eye %caster% 12 8 0.2"
+          silent: true
       Message:
         type: mechanic
         data:
-          message: "§bO olho do furacão engole seus inimigos!"
+          message: "§bOlho do Furacão convoca a tempestade!"
           targets: self
