--- a/plugins/ProSkillAPI/skills/barbarian/barbarian_storm_tempest_cauldron.yml
+++ b/plugins/ProSkillAPI/skills/barbarian/barbarian_storm_tempest_cauldron.yml
@@ -1,39 +1,47 @@
 # Skill: Caldeirão da Tempestade
 name: barbarian_storm_tempest_cauldron
-display: "§3Caldeirão da Tempestade"
-icon: WATER_BUCKET
+display: "§bCaldeirão da Tempestade"
+icon: TRIDENT
 type: Active
 max-level: 1
 attributes:
   cooldown-base: 120
   cooldown-scale: 0
+  mana-cost-base: 30
+  mana-cost-scale: 0
 description:
-  - "§7Invoca chuva elétrica em área de 6 blocos por 10s (50% dano a cada 2s)."
+  - "§7Cria zona de 6 blocos por 10s causando 50% a cada 2s."
 components:
   Cast:
     type: trigger
+    data:
+      cooldown: true
     children:
-      AreaLoop:
+      Zone:
         type: mechanic
         data:
           repeat: 5
           interval: 2
         children:
-          TargetArea:
+          Area:
             type: target
             data:
               shape: sphere
               radius-base: 6
               group: enemy
             children:
-              DealDamage:
+              Damage:
                 type: mechanic
                 data:
-                  damage-base: 0.5
-                  damage-scale: 0
-                  indicator: "§3Raio"
+                  value-base: 0.5
+                  classifier: skill
+              Effect:
+                type: mechanic
+                data:
+                  command: "particle cloud %target_x% %target_y% %target_z% 0 0 0 0.2 20"
+                  silent: true
       Message:
         type: mechanic
         data:
-          message: "§3Você convoca o caldeirão da tempestade!"
+          message: "§bCaldeirão da Tempestade ruge!"
           targets: self
