--- a/plugins/ProSkillAPI/subclasses/barbarian_storm.yml
+++ b/plugins/ProSkillAPI/subclasses/barbarian_storm.yml
@@ -1,35 +1,31 @@
-# Subclasse Arauto da Tempestade do Bárbaro
+# Subclasse Arauto da Tempestade
 name: Barbarian_Storm
 display: "§bArauto da Tempestade"
 description:
-  - "§7Controla descargas elementais e zonas de vento."
-  - "§bSuprime projéteis e controla posicionamento inimigo."
+  - "§7Canaliza elementos para controle de zona e mitigação de projéteis."
+  - "§eMantém danos em área nos limites (6–8 blocos) e controles curtos <=3s."
 options:
   needs-permission: true
   parent: Barbarian
-  mana-name: "Fúria"
 skills:
   tier1:
     active:
       - barbarian_storm_thunder_hammer
       - barbarian_storm_galvanic_surge
-    passive:
-      - barbarian_storm_tempest_aegis
+    passive: []
   tier2:
     active:
       - barbarian_storm_thunder_hammer
       - barbarian_storm_galvanic_surge
       - barbarian_storm_wind_cloak
-    passive:
-      - barbarian_storm_tempest_aegis
+    passive: []
   tier3:
     active:
       - barbarian_storm_thunder_hammer
       - barbarian_storm_galvanic_surge
       - barbarian_storm_wind_cloak
       - barbarian_storm_tempest_cauldron
-    passive:
-      - barbarian_storm_tempest_aegis
+    passive: []
   tier4:
     active:
       - barbarian_storm_thunder_hammer
@@ -37,5 +33,6 @@ skills:
       - barbarian_storm_wind_cloak
       - barbarian_storm_tempest_cauldron
       - barbarian_storm_eye
-    passive:
-      - barbarian_storm_tempest_aegis
+    passive: []
+notes:
+  - "Olho do Furacão aplica vulnerabilidade elétrica via barbarian_cmds.sk para respeitar caps PvP."
